--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="recent">
         <div class="recent__grid">
           <div class="recent__content recent__items h1 d-flex align-items-center mb-0">
@@ -369,7 +369,7 @@
     <h4 class="after__footer_h4">BACK TO TOP <a href="#"> <i class="fal fa-chevron-up after__icon"></i></a></h4>
 
   </div>
-</div>
+</div> -->
 
 
 
