--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
     </header>
-    <!-- <main>
+     <main> 
       <section class="recent">
         <div class="recent__grid">
           <div class="recent__content recent__items h1 d-flex align-items-center mb-0">
